--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Chart/vr-gauge-chart-template.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Chart/vr-gauge-chart-template.html
@@ -13,9 +13,16 @@
         </ul>
     </div>
 
-    <div ng-show="ctrl.isSettingsVisible()" style="z-index: 90; position: relative; ">
-        <div style="position: absolute; bottom: -32px;right:35px;cursor:pointer"><span class="glyphicon  glyphicon-cog" ng-click="ctrl.changeSettings()"></span></div>
-    </div>
+    <div  style="z-index: 90; position: relative;">
+        <!--<div style="position: absolute; bottom: -32px;right:35px;cursor:pointer"><span class="glyphicon  glyphicon-cog" ng-click="ctrl.changeSettings()"></span></div>-->
+        <div style="position: absolute; top: 35px;right:0px;width:150px;border: 1px solid #ddd;padding: 5px;border-radius: 5px;box-shadow: 2px 5px 5px #888888;">
+            <div ng-repeat="i in items">
+                <div style="display:inline-block;width:50px;font-size:9px;font-weight:bold">{{i.label}}</div>
+                <div style="display:inline-block;width:5px;font-size:9px;font-weight:bold">:</div>
+                <div style="display:inline-block;width:calc( 100% - 65px);font-size:9px; text-align:right">{{i.value}}</div>
+            </div>
+        </div>
+     </div>
     <div id="divChart" ng-style="ctrl.chartStyle" style="height:200px" />
 
 </div>
