--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
@@ -11,7 +11,7 @@
             <span class="glyphicon glyphicon-wrench vr-grid-menu-h-dote hand-cursor"></span>
         </div>
         <ul class="vr-grid-menu out-div" ng-show="ctrl.showgmenu==true && ctrl.hideGridMenu == false " click-outside="ctrl.toggelGridMenu($event, false)" outside-if-not="out-div">
-            <li role="presentation" vr-disabled="ctrl.isExporting" ng-if="ctrl.showExportAction()">
+            <li role="presentation" vr-disabled="ctrl.isExporting" ng-if="ctrl.showExportAction() && ctrl.exportIsClickable">
                 <span style="padding-left:4px;color:black;text-align:center" class="hand-cursor" aria-hidden="true" ng-click="ctrl.onExportClicked()">Export</span>
                 <img src="../../Client/Javascripts/Directives/Button/images/loader-mask.gif" style="width:14px;margin-left:3px" ng-show="ctrl.isExporting" />
             </li>
