Add invisibleheader attribute to hide column header
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40053

--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
@@ -32,7 +32,7 @@
         </div>
         <div ng-style="{'display':'inline-flex', 'width': ctrl.dataColumnsSectionWidth}" ng-class="ctrl.isDraggableColumns?'dragcol':''" ng-sortable="ctrl.headerSortableListener">
             <div ng-repeat="colDef in ctrl.columnDefs" ng-hide="colDef.isHidden" ng-style="{'width': colDef.width, 'display':'inline-block'}">
-                <vr-datagridcell htmltemplate='colDef.headerCellTemplate'></vr-datagridcell>
+                <vr-datagridcell htmltemplate='colDef.headerCellTemplate' ng-hide="colDef.invisibleHeader"></vr-datagridcell>
             </div>
         </div>
         <div ng-if="!ctrl.isMainItemsShown" ng-style="{'width': $parent.ctrl.actionTypeColumnWidth, 'display':'inline-flex'}">
