--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Inputs/Select/vr-select.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Inputs/Select/vr-select.html
@@ -1,33 +1,46 @@
-﻿<div class="dropdown-container1" >
+﻿<div class="dropdown-container1">
     <div class="dropdown-container2">
         <vr-validator validate="ctrl.validate()" vr-input>
-            <div class="dropdown drop-down-inside-modal" >
-                <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenuRule" ng-mouseenter="ctrl.muteaction($event);" ng-if="!ctrl.readOnly || ctrl.isMultiple()">
-                    <li role="presentation" ng-click="ctrl.onClickLi($event)" ng-if="ctrl.isDropDownOpened()" >
+            <div class="dropdown drop-down-inside-modal">
+                <ul class="dropdown-menu" ng-if="!ctrl.readOnly || ctrl.isMultiple()" vr-loader="ctrl.isloading">
+                    <li class="vr-select-advance-search"  ng-show="ctrl.showSearchSection" ng-if="ctrl.includeAdvancedSearch">
+                        <div ng-transclude style="height: calc(100% - 40px); border-left: 1px solid #ddd;"></div>
+                        <div style="height: 40px; border-left: 1px solid #ddd;">
+                            <vr-columns colnum="7"></vr-columns>
+                            <vr-columns colnum="2">
+                                <vr-button type="Cancel" data-onclick="ctrl.cancelClickTrigger" standalone></vr-button>
+                            </vr-columns>
+                            <vr-columns colnum="2">
+                                <vr-button type="Ok" data-onclick="ctrl.okClickTrigger" standalone></vr-button>
+                            </vr-columns>
+                        </div>
+                    </li>
+                    <li role="presentation" ng-if="ctrl.isDropDownOpened()">
 
                         <!-- filter  -->
                         <div ng-if="!ctrl.readOnly">
-                            <div ng-if="ctrl.isContainerVisible()" style="display: inline-block; width: 220px;">
+                            <div ng-if="ctrl.isContainerVisible()"  style="display: inline-block; width: 220px;">
 
                                 <div ng-if="ctrl.isEnFilter()" style="padding-bottom: 5px; border-bottom: 1px solid #f0f0f0; ">
-                                    <div class="inner-addon right-addon">
+                                    <div class="inner-addon right-addon" ng-style="{'width':(ctrl.includeAdvancedSearch)?'calc(100% - 25px)':'100%','display':'inline-block'}">
 
                                         <i ng-if="!ctrl.isRemoteLoad()" class="glyphicon glyphicon-remove hand-cursor" ng-click="ctrl.clearFilter($event)"></i>
-                                        <input ng-if="!ctrl.isRemoteLoad()" id="filterInput" type="text" class="form-control input-sm" style="width:100%" ng-model="ctrl.filtername" ng-click="ctrl.muteAction($event)" ng-change="ctrl.searchLocal();" />
+                                        <input ng-if="!ctrl.isRemoteLoad()" id="filterInput" type="text" class="form-control input-sm" style="width:100%" ng-model="ctrl.filtername" ng-change="ctrl.searchLocal();" />
 
                                         <i ng-if="ctrl.isRemoteLoad()" class="glyphicon icon-loader" ng-show="ctrl.showloading"></i>
-                                        <input ng-if="ctrl.isRemoteLoad()" id="filterInput" class="form-control input-sm" style="width:100%" type="text" placeholder="{{ctrl.limitplaceholder}}" ng-click="ctrl.muteAction($event)" ng-model="ctrl.filtername" ng-change="ctrl.search();">
+                                        <input ng-if="ctrl.isRemoteLoad()" id="filterInput" class="form-control input-sm" style="width:100%" type="text" placeholder="{{ctrl.limitplaceholder}}" ng-model="ctrl.filtername" ng-change="ctrl.search();">
 
                                     </div>
+                                    <span style="display: inline-block;width:20px;z-index:1200" ng-if="ctrl.includeAdvancedSearch" ng-click="ctrl.toggleAdvancedSearch()" class=" glyphicon hand-cursor" ng-class="ctrl.showSearchSection ? 'glyphicon-backward': 'glyphicon-forward'" title="{{ctrl.showSearchSection?'Hide advance search':'Show advance search'}}"></span>
                                 </div>
 
                                 <div style="position:absolute" ng-if="ctrl.isRemoteLoad()" ng-show="!ctrl.showloading && ctrl.filtername.length < ctrl.limitcharactercount">Please type {{ctrl.limitcharactercount - ctrl.filtername.length}} character(s)..</div>
                                 <div style="position:absolute" ng-if="ctrl.isRemoteLoad()" ng-show="ctrl.showloading">Loading..</div>
 
-                                <div id="divDataSourceContainer" class="vr-select-height" ng-if="ctrl.isMultiple()" style="overflow: auto; margin-top: 5px; padding-left: 3px;" ng-class="ctrl.isEnFilter()? 'with-filter' : 'no-filter'">
-                                    <div id="divDataSourceBody">
+                                <div id="divDataSourceContainer{{ctrl.id}}" class="vr-select-height" ng-if="ctrl.isMultiple()" style="overflow: auto; margin-top: 5px; padding-left: 3px;" ng-class="ctrl.isEnFilter()? 'with-filter' : 'no-filter'">
+                                    <div id="divDataSourceBody{{ctrl.id}}">
                                         <div id="{{::ctrl.getObjectValue(c)}}" dataindex="{{$index}}" style="position:relative" ng-repeat="c in ctrl.boundDataSource" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;">
-                                            <a href="" class="mark-select " ng-click="ctrl.selectValue($event, c); "
+                                            <a href="" class="mark-select" ng-click="ctrl.selectValue($event, c); "
                                                style="display: inline-block; width:calc(100% ); padding: 3px 0px 0px 2px; white-space: normal;" ng-class="ctrl.getObjectDisabled(c)==true ?'vr-select-disabled-item':ctrl.findExsite(c) >-1 ?'selected':'' ">
                                                 <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ ::ctrl.getObjectText(c)}}</div>
                                                 <div style="float:right" ng-show="ctrl.findExsite(c) > -1">✔</div>
@@ -37,11 +50,11 @@
                                     </div>
                                 </div>
                                 <!--<div ng-if="ctrl.isMultiple() && !ctrl.isRemoteLoad()" style="padding-left:5px;"><a href="" ng-click="ctrl.selectAll()">Select all </a></div>-->
-                                <div id="divDataSourceContainer" class="vr-select-height" ng-if="!ctrl.isMultiple()">
-                                    <div id="divDataSourceBody">
+                                <div id="divDataSourceContainer{{ctrl.id}}" class="vr-select-height" ng-if="!ctrl.isMultiple()">
+                                    <div id="divDataSourceBody{{ctrl.id}}">
                                         <div id="{{::ctrl.getObjectValue(c)}}" dataindex="{{$index}}" style="position:relative" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;" ng-repeat="c in ctrl.boundDataSource">
-                                            <a href="" ng-if="!ctrl.isMultiple()" style="display: inline-block; width:100%;padding:2px; white-space: normal;" ng-class=" ctrl.getobjectdisabled(c)==true?'vr-select-disabled-item':''" class="mark-select " ng-click="ctrl.selectValue($event, c);">
-                                                <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{::ctrl.getObjectText(c)}}</div>
+                                            <a href="" ng-if="!ctrl.isMultiple()" style="display: inline-block; width:100%;padding:2px; white-space: normal;" ng-class=" ctrl.getobjectdisabled(c)==true?'vr-select-disabled-item':''" class="mark-select single-select" ng-click="ctrl.selectValue($event, c);">
+                                                <div class="hand-cursor single-select{{ctrl.id}}" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{::ctrl.getObjectText(c)}}</div>
                                             </a>
                                             <span ng-show="showeye" style="display: inline-block;top: 4px;position:absolute;right:2px;" ng-if="ctrl.includeOnViewHandler() && ctrl.showViewButton" ng-click="ctrl.onViewHandler(c)" class=" glyphicon glyphicon-eye-open hand-cursor"></span>
                                         </div>
@@ -49,31 +62,33 @@
                                 </div>
                             </div>
                             <!-- filter -->
-                            <div ng-if="!ctrl.isContainerVisible()">
+                            <div ng-if="!ctrl.isContainerVisible()" ng-style="{'width': ctrl.includeAdvancedSearch? '220px' : '100%'}">
                                 <div ng-if="ctrl.withLocalFiter()" style="padding-bottom: 5px; border-bottom: 1px solid #f0f0f0; ">
-                                    <div class="inner-addon right-addon">
+                                    <div class="inner-addon right-addon" ng-style="{'width':(ctrl.includeAdvancedSearch)?'calc(100% - 25px)':'100%','display':'inline-block'}">
                                         <i class="glyphicon glyphicon-remove hand-cursor" style="top:9px" ng-click="ctrl.clearFilter($event)"></i>
-                                        <input id="filterInput" type="text" class="form-control input-sm" style="width:100%" ng-model="ctrl.filtername" ng-click="ctrl.muteAction($event)" ng-change="ctrl.searchLocal();" />
+                                        <input id="filterInput" type="text" class="form-control input-sm" style="width:100%" ng-model="ctrl.filtername" ng-change="ctrl.searchLocal();" />
                                     </div>
+                                    <span style="display: inline-block;width:20px;z-index:1200" ng-if="ctrl.includeAdvancedSearch" ng-click="ctrl.toggleAdvancedSearch()" class=" glyphicon hand-cursor" ng-class="ctrl.showSearchSection ? 'glyphicon-backward': 'glyphicon-forward'" title="{{ctrl.showSearchSection?'Hide advance search':'Show advance search'}}"></span>
+
                                 </div>
-                                <div id="divDataSourceContainer" class="vr-select-height">
-                                    <div id="divDataSourceBody">
-                                        <div id="{{::ctrl.getObjectValue(c)}}" dataindex="{{$index}}" ng-repeat="c in ctrl.boundDataSource" style="position:relative" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;">
-                                            <a href="" ng-if="!ctrl.isContainerVisible()" ng-class="ctrl.getObjectDisabled(c)==true?'vr-select-disabled-item':''" class="mark-select " ng-click="ctrl.selectValue($event, c)" ng-mouseenter="ctrl.muteaction($event);"
-                                               style="display: inline-block; width:100%;padding:2px; white-space: normal;">
-                                                <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{::ctrl.getObjectText(c)}} </div>
-                                            </a>
-                                            <span ng-show="showeye" style="display: inline-block;top: 6px;position:absolute;right:2px;" ng-if="ctrl.includeOnViewHandler() && ctrl.showViewButton" ng-click="ctrl.onViewHandler(c)" class=" glyphicon glyphicon-eye-open hand-cursor"></span>
+                                <div id="divDataSourceContainer{{ctrl.id}}" class="vr-select-height source-container-{{ctrl.id}}">
+                                        <div id="divDataSourceBody{{ctrl.id}}">
+                                            <div id="{{::ctrl.getObjectValue(c)}}" dataindex="{{$index}}" ng-repeat="c in ctrl.boundDataSource" style="position:relative" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;">
+                                                <a href="" ng-if="!ctrl.isContainerVisible()" ng-class="ctrl.getObjectDisabled(c)==true?'vr-select-disabled-item':''" class="mark-select single-select{{ctrl.id}}" ng-click="ctrl.selectValue($event, c)"
+                                                   style="display: inline-block; width:100%;padding:2px; white-space: normal;">
+                                                    <div class="hand-cursor single-select{{ctrl.id}}" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{::ctrl.getObjectText(c)}} </div>
+                                                </a>
+                                                <span ng-show="showeye" style="display: inline-block;top: 6px;position:absolute;right:2px;" ng-if="ctrl.includeOnViewHandler() && ctrl.showViewButton" ng-click="ctrl.onViewHandler(c)" class=" glyphicon glyphicon-eye-open hand-cursor"></span>
+                                            </div>
                                         </div>
-                                    </div>
-                                </div>
+</div>
                             </div>
 
                             <!-- Add DIV in case of multiple -->
-                            <div ng-if="ctrl.selectedSectionVisible()" style="border-left:1px solid #f0f0f0;display: inline-block; max-width: 220px; overflow: auto; white-space:normal" ng-show="ctrl.selectedSectionVisible()">
+                            <div class="selected-container" ng-if="ctrl.selectedSectionVisible()" style="border-left:1px solid #f0f0f0;display: inline-block; max-width: 220px; overflow: auto; white-space:normal" ng-show="ctrl.selectedSectionVisible()">
                                 <div style="padding:5px ;height:29px">
                                     {{ctrl.selectlbl}}
-                                    <a href="" class="link" style="position: absolute; right: 5px;" ng-click="ctrl.clearAllSelected($event); ">
+                                    <a href="" class="link remove-selection" style="position: absolute; right: 5px;top:20px" ng-click="ctrl.clearAllSelected($event); ">
                                         Clear all
                                         <i class="glyphicon glyphicon-trash hand-cursor "></i>
                                     </a>
@@ -87,7 +102,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div ng-if="ctrl.readOnly" style="border-left:1px solid #f0f0f0;display: inline-block; max-width: 220px; overflow: auto; white-space:normal" >
+                        <div ng-if="ctrl.readOnly" style="border-left:1px solid #f0f0f0;display: inline-block; max-width: 220px; overflow: auto; white-space:normal">
                             <div style="padding:5px ;height:29px">
                                 {{ctrl.selectlbl}}
                             </div>
