--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
@@ -1,5 +1,5 @@
 ﻿<div class="vr-datagrid" vr-loader="ctrl.isLoadingMoreData" level="{{ctrl.ngClassLevel}}">
-    <vr-choices ng-show="ctrl.updateItems.length > 0" onselectionchanged="ctrl.viewSelectionChanged()">
+    <vr-choices ng-show="ctrl.updateItems.length > 0" onselectionchanged="ctrl.viewSelectionChanged()" selectedindex="ctrl.selectedView">
         <vr-choice isselected="ctrl.isMainItemsShown">Main View</vr-choice>
         <vr-choice>Updated Items ({{ctrl.updateItems.length}})</vr-choice>
     </vr-choices>
