vr-toolbox base directive + drag drop implementation and integration with vr-datagrid vr-datalist
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42249

--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
@@ -52,7 +52,7 @@
                     <div vr-htmlcompiler="ctrl.summaryRowHtml" style="display: flex;"></div>
                 </div>
             </div>
-            <div ng-sortable="ctrl.itemsSortable">
+            <div ng-sortable="ctrl.itemsSortable" ng-class="ctrl.dragdropsetting && ctrl.datasource.length==0  ?'empty-vrdatagrid-drop' : '' ">
                 <div id="rowSection1" class="vr-datagrid-body" ng-repeat="dataItem in ctrl.datasource">
 
                 </div>
