--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Inputs/Select/vr-select.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Inputs/Select/vr-select.html
@@ -36,19 +36,7 @@
 
                                 <div style="position:absolute" ng-if="ctrl.isRemoteLoad()" ng-show="!ctrl.showloading && ctrl.filtername.length < ctrl.limitcharactercount">Please type {{ctrl.limitcharactercount - ctrl.filtername.length}} character(s)..</div>
                                 <div style="position:absolute" ng-if="ctrl.isRemoteLoad()" ng-show="ctrl.showloading">Loading..</div>
-
-                                <div id="divDataSourceContainer{{ctrl.id}}" class="vr-select-height" ng-if="ctrl.isMultiple()" style="overflow: auto; margin-top: 5px; padding-left: 3px;" ng-class="ctrl.isEnFilter()? 'with-filter' : 'no-filter'">
-                                    <div id="divDataSourceBody{{ctrl.id}}">
-                                        <div id="{{::ctrl.getObjectValue(c)}}" dataindex="{{$index}}" style="position:relative" ng-repeat="c in ctrl.boundDataSource" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;">
-                                            <a href="" class="mark-select" ng-click="ctrl.selectValue($event, c); "
-                                               style="display: inline-block; width:calc(100% ); padding: 3px 0px 0px 2px; white-space: normal;" ng-class="ctrl.getObjectDisabled(c)==true ?'vr-select-disabled-item':ctrl.findExsite(c) >-1 ?'selected':'' ">
-                                                <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ ::ctrl.getObjectText(c)}}</div>
-                                                <div style="float:right" ng-show="ctrl.findExsite(c) > -1">✔</div>
-                                            </a>
-                                            <span ng-show="showeye" style="display: inline-block;top: 6px;position:absolute;right:2px;" ng-if="ctrl.includeOnViewHandler() && ctrl.showViewButton" ng-click="ctrl.onViewHandler(c)" class=" glyphicon glyphicon-eye-open hand-cursor"></span>
-                                        </div>
-                                    </div>
-                                </div>
+                                                              
                                 <!--<div ng-if="ctrl.isMultiple() && !ctrl.isRemoteLoad()" style="padding-left:5px;"><a href="" ng-click="ctrl.selectAll()">Select all </a></div>-->
                                 <div id="divDataSourceContainer{{ctrl.id}}" class="vr-select-height" ng-if="!ctrl.isMultiple()">
                                     <div id="divDataSourceBody{{ctrl.id}}">
@@ -57,6 +45,18 @@
                                                 <div class="hand-cursor single-select{{ctrl.id}}" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{::ctrl.getObjectText(c)}}</div>
                                             </a>
                                             <span ng-show="showeye" style="display: inline-block;top: 4px;position:absolute;right:2px;" ng-if="ctrl.includeOnViewHandler() && ctrl.showViewButton" ng-click="ctrl.onViewHandler(c)" class=" glyphicon glyphicon-eye-open hand-cursor"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="divDataSourceContainer{{ctrl.id}}" class="vr-select-height" ng-if="ctrl.isMultiple()" style="overflow: auto; margin-top: 5px; padding-left: 3px;" ng-class="ctrl.isEnFilter()? 'with-filter' : 'no-filter'">
+                                    <div id="divDataSourceBody{{ctrl.id}}">
+                                        <div id="{{::ctrl.getObjectValue(c)}}" dataindex="{{$index}}" style="position:relative" ng-repeat="c in ctrl.boundDataSource" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;">
+                                            <a href="" class="mark-select" ng-click="ctrl.selectValue($event, c); "
+                                               style="display: inline-block; width:calc(100% ); padding: 3px 0px 0px 2px; white-space: normal;" ng-class="ctrl.getObjectDisabled(c)==true ?'vr-select-disabled-item':ctrl.findExsite(c) >-1 ?'selected':'' ">
+                                                <div class="hand-cursor" style="display: inline-block; width:170px; text-overflow: ellipsis; overflow:hidden">{{ ::ctrl.getObjectText(c)}}</div>
+                                                <div style="float:right" ng-show="ctrl.findExsite(c) > -1">✔</div>
+                                            </a>
+                                            <span ng-show="showeye" style="display: inline-block;top: 6px;position:absolute;right:2px;" ng-if="ctrl.includeOnViewHandler() && ctrl.showViewButton" ng-click="ctrl.onViewHandler(c)" class=" glyphicon glyphicon-eye-open hand-cursor"></span>
                                         </div>
                                     </div>
                                 </div>
@@ -76,7 +76,7 @@
                                         <div id="{{::ctrl.getObjectValue(c)}}" dataindex="{{$index}}" ng-repeat="c in ctrl.boundDataSource" style="position:relative" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;">
                                             <a href="" ng-if="!ctrl.isContainerVisible()" ng-class="ctrl.getObjectDisabled(c)==true?'vr-select-disabled-item':''" class="mark-select single-select{{ctrl.id}}" ng-click="ctrl.selectValue($event, c)"
                                                style="display: inline-block; width:100%;padding:2px; white-space: normal;">
-                                                <div class="hand-cursor single-select{{ctrl.id}}" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{::ctrl.getObjectText(c)}} </div>
+                                                <div class="hand-cursor single-select{{ctrl.id}}" style="display: table-cell; text-overflow: ellipsis; overflow:hidden">{{::ctrl.getObjectText(c)}} </div>
                                             </a>
                                             <span ng-show="showeye" style="display: inline-block;top: 6px;position:absolute;right:2px;" ng-if="ctrl.includeOnViewHandler() && ctrl.showViewButton" ng-click="ctrl.onViewHandler(c)" class=" glyphicon glyphicon-eye-open hand-cursor"></span>
                                         </div>
