--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Pagination/vr-pagination.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Pagination/vr-pagination.html
@@ -1,31 +1,29 @@
 ﻿<vr-form name="formNavigation">
-    <div class="vr-pager-container">
-        <vr-row removeline>
-
-            <vr-columns colnum="2" simplecol>
-                <vr-label style="float: left; margin-top: 2px">
-                    <span style=" ">Page Size: </span>
+    <div class="vr-pager-container" style="overflow:hidden;height:25px" ng-init="pagerCtrl.setDefaultSetting()" >
+        <div style="display:inline-block;width:80px">
+            <vr-label style="float: left; margin-top: 2px">
+                <span style=" ">Page Size: </span>
+            </vr-label>
+            <div style="float: left; ">
+                <vr-select hideremoveicon datasource="pagerCtrl.topCounts" selectedvalues="pagerCtrl.pagersettings.itemsPerPage" data-onselectionchanged="pagerCtrl.pageSizeChanged" nocaret noborder openup></vr-select>
+            </div>
+        </div>
+        <div style="display:inline-block;width:calc(100% - 250px);overflow:hidden" id="paginationContainer">
+            <div style="position:relative;text-align:center " ng-init="pagerCtrl.pagersettings.currentPage = 1" ng-show="pagerCtrl.pagersettings.numberOfPages > 1">
+                <pagination total-items="pagerCtrl.pagersettings.totalDataCount" ng-model="pagerCtrl.pagersettings.currentPage" max-size="pagerCtrl.pagersettings.maxSize" class="pagination-sm vr-custom-pagination" num-pages="pagerCtrl.pagersettings.numberOfPages"
+                            items-per-page="pagerCtrl.pagersettings.itemsPerPage" direction-links="pagerCtrl.pagersettings.showDirectionLinks" boundary-links="pagerCtrl.pagersettings.showBoundaryLinks" rotate="false" ng-change="pagerCtrl.pageChanged()"
+                            previous-text="&lt;" next-text="&gt;" first-text="&lt;&lt;" last-text="&gt;&gt;"></pagination>
+            </div>
+        </div>
+        <div style="display:inline-block;">
+            <div style="position:relative;top:-10px;right:-5px">
+                <vr-label>
+                    <span>Page {{pagerCtrl.pagersettings.currentPage}} of {{pagerCtrl.pagersettings.numberOfPages}}, </span>
                 </vr-label>
-                <div style="float: left; ">
-                    <vr-select hideremoveicon datasource="pagerCtrl.topCounts" selectedvalues="pagerCtrl.pagersettings.itemsPerPage" data-onselectionchanged="pagerCtrl.pageSizeChanged" nocaret noborder openup></vr-select>
-                </div>
-            </vr-columns>
-            <vr-columns colnum="7" simplecol>
-                <div style=" margin-top: 4px;text-align:center " ng-init="pagerCtrl.pagersettings.currentPage = 1" ng-show="pagerCtrl.pagersettings.numberOfPages > 1">
-                    <pagination total-items="pagerCtrl.pagersettings.totalDataCount" ng-model="pagerCtrl.pagersettings.currentPage" max-size="10" class="pagination-sm vr-custom-pagination" num-pages="pagerCtrl.pagersettings.numberOfPages"
-                                items-per-page="pagerCtrl.pagersettings.itemsPerPage" direction-links="true" boundary-links="true" rotate="false" ng-change="pagerCtrl.pageChanged()"
-                                previous-text="&lt;" next-text="&gt;" first-text="&lt;&lt;" last-text="&gt;&gt;"></pagination>
-                </div>
-            </vr-columns>
-            <vr-columns colnum="3" simplecol>
-                <vr-label style="float: right; margin-top: 2px; margin-right: 5px;">
-                    <span style="">Total count ({{pagerCtrl.pagersettings.totalDataCount}})</span>
+                <vr-label>
+                    <span>Total count ({{pagerCtrl.pagersettings.totalDataCount}})</span>
                 </vr-label>
-                <vr-label style="float:right; margin-top: 2px">
-                    <span style="">Page {{pagerCtrl.pagersettings.currentPage}} of {{pagerCtrl.pagersettings.numberOfPages}}, </span>
-                </vr-label>
-            </vr-columns>
-
-        </vr-row>
-    </div>    
+            </div>
+        </div>
+    </div>
 </vr-form>
