--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Services/APIServices/ReenterPasswordModal.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Services/APIServices/ReenterPasswordModal.html
@@ -1,6 +1,7 @@
 ﻿<div vr-modalcontent ng-controller="VR_ReenterPasswordModalController">
-    <vr-modalbody width="'30%'">
-        <vr-form name="formReenterPassword">
+    <vr-form name="formReenterPassword" submitname="reenterpassword">
+
+        <vr-modalbody width="'30%'">
             <vr-row>
                 <vr-columns colnum="6">
                     <vr-textbox value="email" label="Email" type="text" vr-disabled="true"></vr-textbox>
@@ -9,14 +10,14 @@
                     <vr-textbox value="password" label="Password" type="password" isrequired></vr-textbox>
                 </vr-columns>
             </vr-row>
-        </vr-form>
-    </vr-modalbody>
-    <div>
-        <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
-            <div transclude-to="buttons">
-                <vr-button type="Ok" formname="formReenterPassword" data-onclick="OkClicked" isasynchronous="true"></vr-button>
-                <vr-button type="Close" data-onclick="close"></vr-button>
-            </div>
-        </vr-actionbar>
-    </div>
+        </vr-modalbody>
+        <div>
+            <vr-actionbar showcollapsebutton="false" issectioncollapsed="false" formsubmitsection>
+                <div transclude-to="buttons">
+                    <vr-button type="Ok" formname="formReenterPassword" data-onclick="OkClicked" isasynchronous="true" submitname="reenterpassword"></vr-button>
+                    <vr-button type="Close" data-onclick="close"></vr-button>
+                </div>
+            </vr-actionbar>
+        </div>
+    </vr-form>
 </div>
