--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Inputs/Select/vr-select.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Inputs/Select/vr-select.html
@@ -40,8 +40,8 @@
                                 <!--<div ng-if="ctrl.isMultiple() && !ctrl.isRemoteLoad()" style="padding-left:5px;"><a href="" ng-click="ctrl.selectAll()">Select all </a></div>-->
                                 <div id="divDataSourceContainer{{ctrl.id}}" class="vr-select-height" ng-if="!ctrl.isMultiple()">
                                     <div id="divDataSourceBody{{ctrl.id}}">
-                                        <div id="{{::ctrl.getObjectValue(c)}}" dataindex="{{$index}}" style="position:relative" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;" ng-repeat="c in ctrl.boundDataSource">
-                                            <a href="" ng-if="!ctrl.isMultiple()" style="display: inline-block; width:100%;padding:2px; white-space: normal;" ng-class=" ctrl.getobjectdisabled(c)==true?'vr-select-disabled-item':''" class="mark-select single-select" ng-click="ctrl.selectValue($event, c);">
+                                        <div id="{{::ctrl.getObjectValue(c)}}" dataindex="{{$index}}" style="position:relative" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;" ng-repeat="c in ctrl.boundDataSource" title="{{ctrl.getTooltipValue(c)}}" ng-class="ctrl.getObjectStyle(c)">
+                                            <a href="" ng-if="!ctrl.isMultiple()" style="display: block; width:100%;padding:2px; white-space: normal;height:25px" ng-class=" ctrl.getobjectdisabled(c)==true?'vr-select-disabled-item':''" class="mark-select single-select" ng-click="ctrl.selectValue($event, c);">
                                                 <div class="hand-cursor single-select{{ctrl.id}}" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{::ctrl.getObjectText(c)}}</div>
                                             </a>
                                             <span ng-show="showeye" style="display: inline-block;top: 4px;position:absolute;right:2px;" ng-if="ctrl.includeOnViewHandler() && ctrl.showViewButton" ng-click="ctrl.onViewHandler(c)" class=" glyphicon glyphicon-eye-open hand-cursor"></span>
@@ -50,7 +50,7 @@
                                 </div>
                                 <div id="divDataSourceContainer{{ctrl.id}}" class="vr-select-height" ng-if="ctrl.isMultiple()" style="overflow: auto; margin-top: 5px; padding-left: 3px;" ng-class="ctrl.isEnFilter()? 'with-filter' : 'no-filter'">
                                     <div id="divDataSourceBody{{ctrl.id}}">
-                                        <div id="{{::ctrl.getObjectValue(c)}}" dataindex="{{$index}}" style="position:relative" ng-repeat="c in ctrl.boundDataSource" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;">
+                                        <div id="{{::ctrl.getObjectValue(c)}}" dataindex="{{$index}}" style="position:relative" ng-repeat="c in ctrl.boundDataSource" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;" title="{{ctrl.getTooltipValue(c)}}" ng-class="ctrl.getObjectStyle(c)">
                                             <a href="" class="mark-select" ng-click="ctrl.selectValue($event, c); "
                                                style="display: inline-block; width:calc(100% ); padding: 3px 0px 0px 2px; white-space: normal;" ng-class="ctrl.getObjectDisabled(c)==true ?'vr-select-disabled-item':ctrl.findExsite(c) >-1 ?'selected':'' ">
                                                 <div class="hand-cursor" style="display: inline-block; width:170px; text-overflow: ellipsis; overflow:hidden">{{ ::ctrl.getObjectText(c)}}</div>
@@ -73,9 +73,9 @@
                                 </div>
                                 <div id="divDataSourceContainer{{ctrl.id}}" class="vr-select-height source-container-{{ctrl.id}}">
                                     <div id="divDataSourceBody{{ctrl.id}}">
-                                        <div id="{{::ctrl.getObjectValue(c)}}" dataindex="{{$index}}" ng-repeat="c in ctrl.boundDataSource" style="position:relative" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;">
+                                        <div id="{{::ctrl.getObjectValue(c)}}" dataindex="{{$index}}" ng-repeat="c in ctrl.boundDataSource" style="position:relative" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;" title="{{ctrl.getTooltipValue(c)}}" ng-class="ctrl.getObjectStyle(c)">
                                             <a href="" ng-if="!ctrl.isContainerVisible()" ng-class="ctrl.getObjectDisabled(c)==true?'vr-select-disabled-item':''" class="mark-select single-select{{ctrl.id}}" ng-click="ctrl.selectValue($event, c)"
-                                               style="display: inline-block; width:100%;padding:2px; white-space: normal;">
+                                               style="display: block; width:100%;padding:2px; white-space: normal; height:25px">
                                                 <div class="hand-cursor single-select{{ctrl.id}}" style="display: table-cell; text-overflow: ellipsis; overflow:hidden">{{::ctrl.getObjectText(c)}} </div>
                                             </a>
                                             <span ng-show="showeye" style="display: inline-block;top: 6px;position:absolute;right:2px;" ng-if="ctrl.includeOnViewHandler() && ctrl.showViewButton" ng-click="ctrl.onViewHandler(c)" class=" glyphicon glyphicon-eye-open hand-cursor"></span>
@@ -94,7 +94,7 @@
                                     </a>
                                 </div>
                                 <div style="height: 200px; overflow: auto;padding-top:5px">
-                                    <span class="label custom-label" style="position:relative" ng-repeat="obj in ctrl.selectedvalues" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;">
+                                    <span class="label custom-label" style="position:relative" ng-repeat="obj in ctrl.selectedvalues" ng-mouseenter="showeye = true;" ng-mouseleave="showeye = false;" title="{{ctrl.getTooltipValue(obj)}}">
                                         {{::ctrl.getObjectText(obj)}}
                                         <span class="glyphicon glyphicon-eye-open hand-cursor" ng-if="ctrl.includeOnViewHandler() && ctrl.showViewButton" ng-click="ctrl.onViewHandler(obj)" ng-show="showeye" style="top: 7px;position:absolute;right:0px;"></span>
                                         <span ng-hide="ctrl.hideAddButton" class="glyphicon glyphicon-remove hand-cursor" style="right:2px;" aria-hidden="true" ng-click="ctrl.selectValue($event,obj);"></span>
