add class selector
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43630

--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Inputs/Select/vr-select.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Inputs/Select/vr-select.html
@@ -19,7 +19,7 @@
 
                         <!-- filter  -->
                         <div ng-if="!ctrl.readOnly">
-                            <div ng-if="ctrl.isContainerVisible()" style="display: inline-block; width: 220px;">
+                            <div ng-if="ctrl.isContainerVisible()" class="vr-select-multiple" style="display: inline-block; width: 220px;">
 
                                 <div ng-if="ctrl.isEnFilter()" style="padding-bottom: 5px; border-bottom: 1px solid #f0f0f0; ">
                                     <div class="inner-addon right-addon" ng-style="{'width':(ctrl.includeAdvancedSearch)?'calc(100% - 25px)':'100%','display':'inline-block'}">
